# coreflow-sdk

./: .flake8  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/docs/: API_REFERENCE.md  CREDENTIAL_AWARENESS.md  DOCUMENTATION_SUMMARY.md  EMBEDDING_CONFIGURATION.md  ENVIRONMENT_CONFIGURATION.md  FASTAPI_INTEGRATION.md  VECTOR_CONFIGURATION.md  WORKFLOW_CONFIGURATION.md
.github/workflows/: ci.yml  release.yml
src/coreflow_sdk/: __init__.py
src/coreflow_sdk/model/: __init__.py  _default.py  _factory.py  _mabc.py  registry.py
src/coreflow_sdk/model/api/: __init__.py  _mabc.py  anthropic.py  openai.py
src/coreflow_sdk/model/bedrock/: __init__.py  _mabc.py  anthropic.py
src/coreflow_sdk/model/llamaserver/: __init__.py  _mabc.py
src/coreflow_sdk/model/utils/: __init__.py  config.py  huggingface.py
src/coreflow_sdk/server/: __init__.py
src/coreflow_sdk/server/api/: __init__.py  main.py
src/coreflow_sdk/server/api/endpoints/: __init__.py  chat.py  credentials.py  health.py  models.py  workflow.py
src/coreflow_sdk/utils/: __init__.py  audit.py  env.py  streaming.py
src/coreflow_sdk/vector/: __init__.py  _default.py  memory.py  rag.py
src/coreflow_sdk/vector/utils/: __init__.py  collections.py  config.py  file_operations.py
src/coreflow_sdk/websearch/: __init__.py  _default.py  scrape.py  search.py
src/coreflow_sdk/workflow/: __init__.py  _default.py  _factory.py  _wabc.py
tests/: __init__.py  conftest.py  pytest.ini  test_api_connections.py  test_core_integration.py  test_credential_awareness.py  test_embedding_config.py  test_fastapi_integration.py  test_memory_integration.py  test_rag_integration.py  test_websocket_integration.py  test_workflow_integration.py
